code cleanup: pmd warnings for Boolean creation